--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ scikit-learn>=0.18
 matplotlib>=1.4.3
 pandas>=0.19
 FLASK-CORS == 3.0.8
-opencv-python == 4.1.0.25
+opencv-python-headless==4.2.0.32
+
 
